syntax = "proto3";

package booking;

option go_package = "github.com/squ1ky/flyte/gen/go/booking;bookingv1";

import "google/protobuf/timestamp.proto";

service BookingService {
  rpc CreateBooking (CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBooking (GetBookingRequest) returns (GetBookingResponse);
  rpc ListBookings (ListBookingsRequest) returns (ListBookingsResponse);
  rpc CancelBooking (CancelBookingRequest) returns (CancelBookingResponse);
}

message Booking {
  string id = 1;
  int64 user_id = 2;
  int64 flight_id = 3;
  string seat_number = 4;

  string passenger_name = 5;
  string passenger_passport = 6;

  string status = 7;
  double price = 8;
  string currency = 9;

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CreateBookingRequest {
  int64 user_id = 1;
  int64 flight_id = 2;
  string seat_number = 3;

  string passenger_name = 4;
  string passenger_passport = 5;

  double price = 6;
  string currency = 7;
}

message CreateBookingResponse {
  string booking_id = 1;
}

message GetBookingRequest {
  string booking_id = 1;
}

message GetBookingResponse {
  Booking booking = 1;
}

message ListBookingsRequest {
  int64 user_id = 1;
}

message ListBookingsResponse {
  repeated Booking bookings = 1;
}

message CancelBookingRequest {
  string booking_id = 1 ;
}

message CancelBookingResponse {

}